# icFlow3

./: CMakeLists.txt  CMakeLists.txt.user.9138909  README.md  benchmarking.h
geometry/: baseelement.h  boundaryedge.h  edge.cpp  edge.h  element.cpp  element.h  floevisualization.cpp  floevisualization.h  geometry.cpp  geometry.h  geometry_stable.cpp  mesh.cpp  mesh.h  model.cpp  model.h  node.cpp  node.cpp.autosave  node.h
gui/: backgroundworker.cpp  icons.qrc  main.cpp  preferences_gui.h
gui/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
meshes/floes/: amoeba2.stl  circle20.stl  doughnut.stl  floe0b.stl  floe2.stl  half-plane.stl  half-plane2.stl  irregular_floe_20.stl  patch.stl  patch6.stl  patch60.stl  sheet_100m.stl  tank_floe2.stl  tank_floe_20.stl  triangle.stl
meshes/solids/: channel.stl  island5a.stl  strange_boulder.stl
setups/: 1-irregular-floe.h5  2-circular-floe_a.h5  3-circular-floe_b.h5  4-indentation.h5  5-standing-waves.h5  6-waterfall-3cm.h5  7-waterfall10.h5  8-waterfall-50.h5
simulation/: SimpleObjectPool.h  frameinfo.h  linearsystem.cpp  linearsystem.cpp.autosave  linearsystem.h  linearsystem.h.autosave  model.cpp  model.h  modelcontroller.cpp  modelcontroller.h  modelcontrollerinterface.h  parameters_sim.h  serializer.cpp  serializer.h
